--- a/Info.plist
+++ b/Info.plist
@@ -22,12 +22,17 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Gotham Rounded Book.ttf</string>
 		<string>dincond-bold-58f64f9a6d5db.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>LSApplicationCategoryType</key>
+	<array>
+		<string></string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
